[project]
name = "asyncio_gazebo"
version = "1.0.0"
description = "Asyncio interface to gazebo transport subscribers. Based on asyncio_for_robotics"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Elian NEPPEL", email = "elian.dev@posteo.com" }
]
requires-python = ">=3.10,<3.15"
keywords = ["asyncio", "robotics", "gazebo", "publisher", "subscriber"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Environment :: Console",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Networking",
  "Framework :: AsyncIO",
]

dependencies = [
"asyncio_for_robotics>=1.3.5,<2",
]

[build-system]
requires = ["setuptools >= 58.2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["asyncio_gazebo", "asyncio_gazebo.*"]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/2lian/asyncio-gazebo"
Repository = "https://github.com/2lian/asyncio-gazebo"
Issues = "https://github.com/2lian/asyncio-gazebo/issues"

[tool.setuptools.package-data]
"asyncio_gazebo" = ["py.typed"]
